--- a/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
@@ -84,6 +84,18 @@
           src: url('fonts/DIN-Bold.woff') format("woff");
       }
       .DINBold { font-family: DINBold; }
+
+      @font-face {
+          font-family: MonumentGroteskMedium;
+          src: url('fonts/MonumentGrotesk-Medium.woff') format("woff");
+      }
+      .MonumentGroteskMedium { font-family: MonumentGroteskMedium; }
+
+      @font-face {
+          font-family: FSElliotProBold;
+          src: url('fonts/FSElliotPro-Bold.woff') format("woff");
+      }
+      .FSElliotProBold { font-family: FSElliotProBold; }
     </style>
     <!--
       Available Classes:-
@@ -348,10 +360,13 @@
                     document.querySelector("#ad").style.fontFamily = "DidotBold";
                   }else if(canopyCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'canopy';
+                    whitePatchColor = '#000';
                     document.querySelector("#logoImage").style.top = '162px';
                     document.querySelector("#logoImage").style.left = '18px';
                     document.querySelector("#logoImage").style.width = '127px';
                     document.querySelector("#logoImage").style.height = '96px';
+
+                    document.querySelector("#ad").style.fontFamily = "FSElliotProBold";
                   }else if(curioCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'curio';
                     document.querySelector("#logoImage").style.top = '178px';
@@ -362,6 +377,7 @@
                     logoImageName = 'motto';
                      document.querySelector("#logoImage").style.top = '166px';
                     document.querySelector("#logoImage").style.height = '89px';
+                    document.querySelector("#ad").style.fontFamily = "MonumentGroteskMedium";
                   }else if(truCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'tru';
                     document.querySelector("#logoImage").style.top = '182px';
