--- a/H/Hilton/Hilton_New_2020_Template/ads/728x90/728x90.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/728x90/728x90.html
@@ -84,6 +84,18 @@
           src: url('fonts/DIN-Bold.woff') format("woff");
       }
       .DINBold { font-family: DINBold; }
+
+      @font-face {
+          font-family: MonumentGroteskMedium;
+          src: url('fonts/MonumentGrotesk-Medium.woff') format("woff");
+      }
+      .MonumentGroteskMedium { font-family: MonumentGroteskMedium; }
+
+      @font-face {
+          font-family: FSElliotProBold;
+          src: url('fonts/FSElliotPro-Bold.woff') format("woff");
+      }
+      .FSElliotProBold { font-family: FSElliotProBold; }
     </style>
     <!--
       Available Classes:-
@@ -339,19 +351,24 @@
                     document.querySelector("#ad").style.fontFamily = "DidotBold";
                   }else if(canopyCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'canopy';
+                    whitePatchColor = '#000';
                     document.querySelector("#logoImage").style.top = '-4px';
                     document.querySelector("#logoImage").style.left = '486px';
                     document.querySelector("#logoImage").style.width = '96px';
                     document.querySelector("#logoImage").style.height = '100px';
+
+                    document.querySelector("#ad").style.fontFamily = "FSElliotProBold";
                   }else if(curioCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'curio';
                     document.querySelector("#logoImage").style.left = '525px';
                     document.querySelector("#logoImage").style.width = '57px';
                   }else if(mottoCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'motto';
+                    whitePatchColor = '#000';
                     document.querySelector("#logoImage").style.left = '1px';
                     document.querySelector("#logoImage").style.left = '498px';
                     document.querySelector("#logoImage").style.width = '86px';
+                    document.querySelector("#ad").style.fontFamily = "MonumentGroteskMedium";
                   }else if(truCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'tru';
                     document.querySelector("#logoImage").style.left = '540px';
