--- a/H/Hilton/Hilton_New_2020_Template/ads/160x600/160x600.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/160x600/160x600.html
@@ -258,6 +258,7 @@
                 displayValue = content['layoutCode'].toUpperCase();
               } catch (e) {}
               var hiltonCodes = splitCodes("HI,HH");
+              var hiltonHotelResortCodes = splitCodes("HHR");
               var waldorfCodes = splitCodes("WA");
               var embassyCodes = splitCodes("ES");
               var doubleTreeCodes = splitCodes("DT");
@@ -287,6 +288,9 @@
                   if(hiltonCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'hilton';
                     document.querySelector("#logoImage").style.top = '409px';
+                  }else if(hiltonHotelResortCodes.indexOf(matchingCodes[matchIndex]) != -1){
+                    logoImageName = 'hhr';
+                    document.querySelector("#logoImage").style.top = '381px';
                   }else if(waldorfCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'waldorf';
                     whitePatchColor = '#000';
