--- a/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
@@ -257,6 +257,7 @@
                 displayValue = content['layoutCode'].toUpperCase();
               } catch (e) {}
               var hiltonCodes = splitCodes("HI,HH");
+              var hiltonHotelResortCodes = splitCodes("HHR");
               var waldorfCodes = splitCodes("WA");
               var embassyCodes = splitCodes("ES");
               var doubleTreeCodes = splitCodes("DT");
@@ -287,6 +288,11 @@
                     logoImageName = 'hilton';
                     document.querySelector("#logoImage").style.top = '170px';
                     document.querySelector("#logoImage").style.left = '27px';
+                  }else if(hiltonHotelResortCodes.indexOf(matchingCodes[matchIndex]) != -1){
+                    logoImageName = 'hhr';
+                    document.querySelector("#logoImage").style.top = '188px';
+                    document.querySelector("#logoImage").style.left = '45px';
+                    document.querySelector("#logoImage").style.height = '44px';
                   }else if(waldorfCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'waldorf';
                     whitePatchColor = '#000';
