--- a/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
@@ -96,6 +96,30 @@
           src: url('fonts/FSElliotPro-Bold.woff') format("woff");
       }
       .FSElliotProBold { font-family: FSElliotProBold; }
+
+      @font-face {
+          font-family: GothamBlack;
+          src: url('fonts/Gotham-Black.woff') format("woff");
+      }
+      .GothamBlack { font-family: GothamBlack; }
+
+      @font-face {
+          font-family: StagLCGBold;
+          src: url('fonts/Stag LCG-Bold.woff') format("woff");
+      }
+      .StagLCGBold { font-family: StagLCGBold; }
+
+      @font-face {
+          font-family: LoewBlack;
+          src: url('fonts/Loew-Black.woff') format("woff");
+      }
+      .LoewBlack { font-family: LoewBlack; }
+
+      @font-face {
+          font-family: BrandonGrotesqueBoldItalic;
+          src: url('fonts/BrandonGrotesque-BoldItalic.woff') format("woff");
+      }
+      .BrandonGrotesqueBoldItalic { font-family: BrandonGrotesqueBoldItalic; }
     </style>
     <!--
       Available Classes:-
@@ -290,9 +314,11 @@
                     document.querySelector("#logoImage").style.left = '27px';
                   }else if(hiltonHotelResortCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'hhr';
-                    document.querySelector("#logoImage").style.top = '188px';
-                    document.querySelector("#logoImage").style.left = '45px';
-                    document.querySelector("#logoImage").style.height = '44px';
+                    document.querySelector("#logoImage").style.top = '177px';
+                    document.querySelector("#logoImage").style.left = '35px';
+                    document.querySelector("#logoImage").style.height = '65px';
+
+                    document.querySelector("#ad").style.fontFamily = "LoewBlack";
                   }else if(waldorfCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'waldorf';
                     whitePatchColor = '#000';
@@ -315,6 +341,8 @@
                     document.querySelector("#logoImage").style.left = '0px';
                     document.querySelector("#logoImage").style.width = '140px';
                     document.querySelector("#logoImage").style.height = '120px';
+
+                    document.querySelector("#ad").style.fontFamily = "StagLCGBold";
                   }else if(conradCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'conrad';
                     document.querySelector("#logoImage").style.top = '155px';
@@ -379,6 +407,8 @@
                     document.querySelector("#logoImage").style.left = '23px';
                     document.querySelector("#logoImage").style.width = '125px';
                     document.querySelector("#logoImage").style.height = '64px';
+
+                    document.querySelector("#ad").style.fontFamily = "GothamBlack";
                   }else if(mottoCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'motto';
                      document.querySelector("#logoImage").style.top = '166px';
@@ -395,6 +425,9 @@
                   }else if(tapestryCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'tapestry';
                     document.querySelector("#logoImage").style.height = '89px';
+
+                    document.querySelector("#ad").style.fontFamily = "BrandonGrotesqueBoldItalic";
+                    document.querySelector("#cta").style.fontFamily = "BrandonGrotesqueBlack";
                   }else if(hgvCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'hgv';
                     document.querySelector("#logoImage").style.height = '91px';
