added logo image

--- a/H/Hilton/Hilton_New_2020_Template/ads.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads.html
@@ -161,6 +161,7 @@
             'Simplified': `var cam = {
               layoutCode: data.layoutCode,
               backgroundImage: '../../assets/'+data.backgroundImage,
+              logoImage: data.logoImage,
               logoColor: data.logoColor,
               frameText1: data.frameText1,
               frameText2: data.frameText2,
