--- a/H/Hilton/Hilton_New_2020_Template/ads/160x600/160x600.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/160x600/160x600.html
@@ -257,7 +257,7 @@
           },
           feed: [
             {
-              name: 'Hilton',
+              name: 'default',
             }
           ],
           staticData: {
@@ -404,7 +404,14 @@
                 }
               }
               document.querySelector("#whitePatch").style.backgroundColor = whitePatchColor;
-              content['logoImage'] = 'images/' + logoImageName  + '_' + content['logoColor'].toLowerCase() + '.png';
+
+              if(content['name'].toLowerCase().indexOf('default') != -1){
+                try{
+                  content['logoImage'] = content['logoImage'];
+                } catch (e) {}
+              } else {
+                content['logoImage'] = 'images/' + logoImageName  + '_' + content['logoColor'].toLowerCase() + '.png';
+              }
 
               function splitCodes(str){
                 if(str && str.length > 0){
