--- a/M/Microsoft/M365_Consumer_Refresh/ads/300x250/MoneyInExcel/M365_FY21Q2ConsRefresh_USA_300x250_BAN_MoneyInExcel_English_NA_Standard_ANI_BN_NA_1.htm
+++ b/M/Microsoft/M365_Consumer_Refresh/ads/300x250/MoneyInExcel/M365_FY21Q2ConsRefresh_USA_300x250_BAN_MoneyInExcel_English_NA_Standard_ANI_BN_NA_1.htm
@@ -26,7 +26,7 @@
 <!-- <script>var clickTag = "http://www.google.com";</script> -->
 <script src="iphone-inline-video.min.js"></script>
 <!-- <script src="copy.js"></script> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
 <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
 <script src="M365_FY21Q2ConsRefresh_USA_300x250_BAN_MoneyInExcel_English_NA_Standard_ANI_BN_NA_1.js?1501171107836"></script>
 <meta name="ad.size" content="width=300,height=250">
@@ -167,13 +167,6 @@ function handleComplete(evt,comp) {
                 bannerData.headline4 = getValue();
                 bannerData.headline5 = getValue(2);
                 bannerData.headline6 = getValue();
-                bannerData.headline7 = getValue(3);
-                bannerData.headline8 = getValue();
-                bannerData.headline9 = getValue(4);
-                bannerData.headline10 = getValue();
-                bannerData.headline11 = getValue(5);
-                bannerData.headline12 = getValue();
-                bannerData.headline13 = getValue();
                 bannerData.headline14 = eval(bannerData.textField2);
                 bannerData.headline15 = eval(bannerData.textField3);
                 bannerData.CTA = bannerData.ctaText ? ['<#FFFFFF>' + bannerData.ctaText,(bannerData.ctaText.length >= 15 ? "9px" : "12px"),0,0,"50","300", "center"] : '';
@@ -261,7 +254,7 @@ function handleComplete(evt,comp) {
 
 <div id="animation_container" style="background-color:transparent; width:300px; height:250px;">
     <video id="vid" preload="auto" src="./video/excel_300x250.mp4" autoplay="false" webkit-playsinline="" type="video/mp4" width="300" height="250" muted="muted" style="position: absolute;  z-index:-5; opacity:0.1;"></video>
-  <canvas id="canvas" width="300" height="250" style="position: absolute; display: block; background-color:transparent; cursor:pointer;" aria-label="Microsoft 3 6 5. Explore Money in Excel. Connect your financial accounts. Track spending. Get personalized alerts.A smart way to track your money. Track, organize, and plan your finances with Money in Excel. Buy now." role="img"></canvas>
+  <canvas id="canvas" width="300" height="250" style="position: absolute; display: block; background-color:transparent; cursor:pointer;" aria-label="Experience the benefit of Microsoft 3 6 5. A smart way to track your money. Track, organize, and plan your finances with Money in Excel. Buy now." role="img"></canvas>
 
 		<div id="dom_overlay_container" style="pointer-events:none; overflow:hidden; width:300px; height:250px; position: absolute; left: 0px; top: 0px; display: block;">
 		<div style="position: absolute; border: 1px solid black; box-sizing: border-box; background-color:transparent; top: 0; left: 0; width: 100%; bottom: 0;"></div>
@@ -336,7 +329,7 @@ var startBanner = function(){
 				function replay() {
 					if (exportRoot.isReplay == true){
 
-						TweenMax.killAll();
+						gsap.defaults({overwrite: "auto"});
 						stage.removeAllChildren();
 						stage.update();
                         var canvas = document.getElementById('canvas');
@@ -354,7 +347,7 @@ var startBanner = function(){
                         vid.currentTime = 0;
                         vid.pause()
                         vid.style.opacity = 0.1;
-						TweenMax.delayedCall(0.1,init)
+						gsap.delayedCall(0.1,init);
 					}
 				}
 
