Fixed logo issue

--- a/H/Hilton/Hilton_New_2020_Template/ads/728x90/728x90.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/728x90/728x90.html
@@ -254,7 +254,7 @@
           },
           feed: [
             {
-              name: 'Hilton',
+              name: 'Default',
             }
           ],
           staticData: {
