--- a/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
@@ -256,7 +256,7 @@
           },
           feed: [
             {
-              name: 'Hilton',
+              name: 'Default',
             }
           ],
           staticData: {
