--- a/H/Hilton/Hilton_New_2020_Template/ads/300x600/300x600.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/300x600/300x600.html
@@ -256,7 +256,7 @@
           },
           feed: [
             {
-              name: 'Hilton',
+              name: 'Default',
             }
           ],
           staticData: {
