--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/PaoliPeaks/320x50_PaoliPeaks.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/320x50/PaoliPeaks/320x50_PaoliPeaks.htm
@@ -153,6 +153,7 @@
                 content.ctaBtnColor = '#583293^#6e47ac';
               }else if(content['brandName'].replace(/ /g,'').toLowerCase() == 'paolipeaks'){
                 content.ctaBtnColor = '#00205C^#012c7c';
+                document.querySelector("#topWhitePatch").style.backgroundColor = "rgba(255, 255, 255, 0.85)";
               }else if(content['brandName'].replace(/ /g,'').toLowerCase() == 'roundtop'){
                 content.ctaBtnColor = '#007FAD^#018cbf';
               }else if(content['brandName'].replace(/ /g,'').toLowerCase() == 'snowcreek'){
