adjusted CTA & white line for full banner logo

--- a/H/Hilton/Hilton_New_2020_Template/ads/160x600/160x600.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/160x600/160x600.html
@@ -418,7 +418,18 @@
                   document.querySelector("#frameText1").style.fontSize = "23px";
                   document.querySelector("#frameText2").style.fontSize = "23px";
                   document.querySelector("#frameText3").style.fontSize = "23px";
+                  
+
+                  document.querySelector("#whitePatch").style.width = "100px";
+                  document.querySelector("#whitePatch").style.top = "525px";
+                  document.querySelector("#whitePatch").style.left = "30px";
+
+                  document.querySelector("#cta").style.width = "100px";
+                  document.querySelector("#cta").style.height = "34px";
+                  document.querySelector("#cta").style.top = "542px";
+                  document.querySelector("#cta").style.left = "30px";
                   document.querySelector("#cta").style.fontSize = "12px";
+
                 } catch (e) {}
               }
 
