--- a/H/Hilton/Hilton_New_2020_Template/ads/300x600/300x600.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/300x600/300x600.html
@@ -417,6 +417,15 @@
                   document.querySelector("#frameText1").style.fontSize = "29px";
                   document.querySelector("#frameText2").style.fontSize = "29px";
                   document.querySelector("#frameText3").style.fontSize = "29px";
+                  document.querySelector("#whitePatch").style.width = "2px";
+                  document.querySelector("#whitePatch").style.height = "34px";
+                  document.querySelector("#whitePatch").style.top = "525px";
+                  document.querySelector("#whitePatch").style.left = "137px";
+
+                  document.querySelector("#cta").style.width = "120px";
+                  document.querySelector("#cta").style.height = "34px";
+                  document.querySelector("#cta").style.top = "525px";
+                  document.querySelector("#cta").style.left = "154px";
                   document.querySelector("#cta").style.fontSize = "15px";
                 } catch (e) {}
               }
