--- a/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
@@ -452,7 +452,15 @@
                     frameText[i].style.fontSize = "24px";
                   }
 
-                  document.querySelector("#cta").style.fontSize = "12px";
+                  document.querySelector("#whitePatch").style.height = "35px";
+                  document.querySelector("#whitePatch").style.top = "188px";
+                  document.querySelector("#whitePatch").style.left = "137px";
+
+                  document.querySelector("#cta").style.width = "120px";
+                  document.querySelector("#cta").style.height = "35px";
+                  document.querySelector("#cta").style.top = "188px";
+                  document.querySelector("#cta").style.left = "165px";
+                  document.querySelector("#cta").style.fontSize = "15px";
                 } catch (e) {}
               }
 
