--- a/M/Microsoft/M365_Mobile_3D_Interactive_Image/ads/250x250/PPTMob/M365_MobileFY21Q2ConsRefresh_USA_250x250_BAN_PPTMob_English_NA_Standard_ANI_BN_NA_1.htm
+++ b/M/Microsoft/M365_Mobile_3D_Interactive_Image/ads/250x250/PPTMob/M365_MobileFY21Q2ConsRefresh_USA_250x250_BAN_PPTMob_English_NA_Standard_ANI_BN_NA_1.htm
@@ -302,7 +302,8 @@ var startBanner = function(){
 						var parentWindows = window.parent.parent.window;
 						if (parentWindows && 'amoUtils' in parentWindows && 'onInteraction' in parentWindows.amoUtils) {
 							try {
-								parentWindows.amoUtils.onInteraction(parentWindow.layout, parentWindow.adData.feedData);
+								var productId = ('id' in parentWindow.adData.feedData ? ('|' + parentWindow.adData.feedData.id) : '')
+								parentWindows.amoUtils.onInteraction(parentWindow.layout + '|' + parentWindow.smartName + '|' + bannerData.ctaText + productId, parentWindow.adData.feedData);
 							} catch (e) {}
 						}
 					}
