--- a/M/Microsoft/M365_Mobile_3D_Interactive_Image/ads/728x90/z728x90.html
+++ b/M/Microsoft/M365_Mobile_3D_Interactive_Image/ads/728x90/z728x90.html
@@ -79,7 +79,7 @@
         }
         window.adData = content[0], window.adClickUrl = adData.url;
         window.layout = adData.layout;
-        window.smartName = 'display_advertiser_category_name' in adData ?  adData.display_advertiser_category_name.split('|')[0] : 'SmartName';
+        window.smartName = 'display_advertiser_category_name' in adData.feedData ?  adData.feedData.display_advertiser_category_name.split('|')[0] : 'SmartName';
         // document.querySelector('iframe').addEventListener("click", exitHandler.bind(this));
         // function exitHandler() {
         //   // window.open(clickTag);
