--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/160x600/WhistlerBlackcomb/160x600_WhistlerBlackcomb.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/160x600/WhistlerBlackcomb/160x600_WhistlerBlackcomb.htm
@@ -22,7 +22,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #FFF;
+        color: #CC0000;
         background-color: #fff;
       }
       .frame {
@@ -41,8 +41,8 @@
       <div id="backgroundImage1" class="asset frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" class="asset frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" class="asset frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="top:-556px;background-color:rgba(204, 0, 0, 0.7);"></div>
-      <div id="bottomWhitePatch" class="frame" style="top:453px;background-color:rgba(204, 0, 0, 0.7);"></div>
+      <div id="topWhitePatch" class="frame" style="top:-556px;background-color:rgba(255, 255, 255, 0.7);"></div>
+      <div id="bottomWhitePatch" class="frame" style="top:453px;background-color:rgba(255, 255, 255, 0.7);"></div>
       <div id="productLableLogoBg" class="asset frame" data-image="productLableLogoBg"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
