--- a/H/Hilton/Hilton_New_2020_Template/ads/728x90/728x90.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/728x90/728x90.html
@@ -427,9 +427,9 @@
               }
               document.querySelector("#whitePatch").style.backgroundColor = whitePatchColor;
               
-              if(content['name'].toLowerCase().indexOf('default') != -1){
+              // if(content['name'].toLowerCase().indexOf('default') != -1){
                 content['logoImage'] = 'images/' + logoImageName  + '_' + content['logoColor'].toLowerCase() + '.png';
-              } else {
+              /*} else {
                 try{
                   content['logoImage'] = content['logoImage'];
                   document.querySelector("#logoImage").style.width = '728px';
@@ -442,7 +442,7 @@
                   document.querySelector("#frameText3").style.fontSize = "25px";
                   document.querySelector("#cta").style.fontSize = "12px";
                 } catch (e) {}
-              }
+              }*/
 
               function splitCodes(str){
                 if(str && str.length > 0){
